# PrismBreak

./: CMakeLists.txt  LICENSE  README.md  main.cpp
data/: tripadvisor_review.csv
data/Country-data/gmm/: classification.csv  df.csv  mean.csv  pig.csv  scaled.csv  sigma.csv
data/Country-data/tmm/: classification.csv  df.csv  mean.csv  pig.csv  scaled.csv  sigma.csv
data/shanghai_ranking_2024_processed/: data.csv
data/shanghai_ranking_2024_processed/gmm/: classification.csv  df.csv  mean.csv  pig.csv  scaled.csv  sigma.csv
data/shanghai_ranking_2024_processed/tmm/: classification.csv  mean.csv  pig.csv  scaled.csv  sigma.csv
data/simplex(dim=12_points=10000)/: data.csv
data/simplex(dim=12_points=10000)/gmm/: classification.csv  df.csv  mean.csv  pig.csv
data/simplex(dim=12_points=10000)/tmm/: sigma.csv
data/simplex(dim=18_points=10000)/gmm/: classification.csv  df.csv  pig.csv  sigma.csv
data/simplex(dim=18_points=10000)/tmm/: df.csv  mean.csv  scaled.csv
data/simplex(dim=24_points=10000)/gmm/: classification.csv  df.csv  mean.csv
data/simplex(dim=24_points=10000)/tmm/: sigma.csv
data/simplex(dim=6_points=10000)/: data.csv
data/simplex(dim=6_points=10000)/gmm/: df.csv  pig.csv  sigma.csv
data/simplex(dim=6_points=10000)/tmm/: classification.csv  mean.csv
data/tripadvisor_review/gmm/: classification.csv  df.csv  mean.csv  pig.csv  scaled.csv  sigma.csv
data/tripadvisor_review/tmm/: classification.csv  df.csv  mean.csv  pig.csv  scaled.csv  sigma.csv
libs/context/: CMakeLists.txt  Context.hpp  context_Bookmarks.hpp
libs/context/context/: Bookmarks.hpp  Context.hpp  Gaussian.hpp  TDistribution.hpp
libs/context/context/src/: Bookmarks.cpp  Context.cpp  Context_GMMFunctions.cpp  Context_TMMFunctions.cpp  Context_internal.cpp  Context_metrics.cpp  Context_read.cpp
libs/context/src/: Context.cpp  Context_GMMFunctions.cpp  Context_TMMFunctions.cpp  Context_internal.cpp  Context_metrics.cpp  Context_read.cpp  context_Bookmarks.cpp
libs/csv/: CMakeLists.txt  csv.hpp
libs/csv/csv/: csv.hpp
libs/gl/: CMakeLists.txt  gl_Buffer.hpp  gl_Framebuffer.hpp  gl_Shader.hpp  gl_Texture.hpp  gl_Texture_old.hpp  gl_VertexArray.hpp  gl_utils.hpp
libs/glPP/: CMakeLists.txt
libs/glPP/glPP/: Buffer.hpp  Framebuffer.hpp  Shader.hpp  Texture.hpp  Texture_old.hpp  VertexArray.hpp  utils.hpp
libs/glfw/: CMakeLists.txt  glfw_Window.hpp
libs/glfw/src/: glfw_Window.cpp
libs/glfwPP/: CMakeLists.txt
libs/glfwPP/glfwPP/: Window.hpp
libs/glfwPP/glfwPP/src/: Window.cpp
libs/gui/: CMakeLists.txt  gui_Manager.hpp
libs/gui/gui/: Manager.hpp
libs/gui/gui/menu/: Coloring.hpp  Element.hpp  Main.hpp  fileDialog.hpp  steepestDescent.hpp
libs/gui/gui/menu/checkbox/: CalculateVisibility.hpp  ScaleByWeight.hpp
libs/gui/gui/menu/combo/: MetricsSortCombo.hpp  ModelCombo.hpp  PointEncodingCombo.hpp  ProjectionMethodCombo.hpp  RenderingCombo.hpp
libs/gui/gui/menu/slider/: CodomainScaleSlider.hpp  DistributionDepthSlider.hpp  DomainScaleSlider.hpp  PointRangeSlider.hpp  ThresholdSlider.hpp
libs/gui/gui/src/: Manager.cpp
libs/gui/src/: gui_Manager.cpp
libs/math/: math_steepestDescent.hpp
libs/menu/: CMakeLists.txt  menu_Coloring.hpp  menu_Element.hpp  menu_Main.hpp  menu_fileDialog.hpp  menu_steepestDescent.hpp
libs/menu/checkbox/: menu_ScaleByWeight.hpp
libs/menu/combo/: menu_MetricsSortCombo.hpp  menu_ModelCombo.hpp  menu_PointEncodingCombo.hpp  menu_ProjectionMethodCombo.hpp  menu_RenderingCombo.hpp
libs/menu/slider/: menu_CodomainScaleSlider.hpp  menu_DistributionDepthSlider.hpp  menu_DomainScaleSlider.hpp  menu_PointRangeSlider.hpp  menu_ThresholdSlider.hpp
libs/pass/: CMakeLists.txt  pass_Base.hpp  pass_Bookmarks.hpp  pass_Points.hpp  pass_Prism.hpp  pass_RayCast.hpp  pass_TextureToScreen.hpp
libs/pass/pass/: Base.hpp  Bookmarks.hpp  Points.hpp  Prism.hpp  RayCast.hpp  Rendering.hpp  TextureToScreen.hpp
libs/pass/pass/shader/: points.vs  rayCast.cs
libs/pass/pass/shader/bookmarks/: level1.fs  wire.vs
libs/pass/pass/shader/libs/: Hull.glsl  distGradient.glsl  distGradient_alt.glsl  dvr.glsl  hulls.glsl  hulls_alt.glsl  text.glsl
libs/pass/pass/shader/prism/: level0.fs  level1.fs  level2.fs  visibility0.cs  visibility1.cs  wire.fs
libs/pass/pass/src/: Bookmarks.cpp  Points.cpp  Prism.cpp  RayCast.cpp  TextureToScreen.cpp
libs/pass/shader/: points.fs  rayCast.cs  rayCast_old.cs  screenTexture.fs  screenTexture.vs
libs/pass/shader/bookmarks/: level0.fs  level2.fs  wire.gs
libs/pass/shader/libs/: Ray.glsl  dvr_alt.glsl  hulls_old.glsl
libs/pass/shader/prism/: level0.fs  level0.vs  level1.fs  level2.fs  visibility0.cs  visibility2.cs
libs/pass/src/: pass_Bookmarks.cpp  pass_Points.cpp  pass_Prism.cpp  pass_Prism_Visibility.cpp  pass_RayCast.cpp  pass_TextureToScreen.cpp
libs/vis/: CMakeLists.txt  vis_Camera.hpp  vis_Controls.hpp  vis_PrismFramebuffer.hpp  vis_Window.hpp  vis_model_old.hpp
libs/vis/src/: vis_Camera.cpp  vis_Controls.cpp  vis_PrismFramebuffer.cpp  vis_Window.cpp  vis_Window_CameraOptimizer.cpp  vis_Window_PerformanceTest.cpp
libs/vis/vis/: Controls.hpp  PrismFramebuffer.hpp  Window.hpp
libs/vis/vis/src/: Camera.cpp  Controls.cpp  PrismFramebuffer.cpp  Window.cpp  Window_CameraOptimizer.cpp  Window_PerformanceTest.cpp
libs_3rd_party/: CMakeLists.txt
libs_3rd_party/ImGuiFileDialog-master/: CMakeLists.txt
libs_3rd_party/glad-old/: CMakeLists.txt
libs_3rd_party/glad-old/include/glad/: glad.h
libs_3rd_party/glad-old/src/: glad.c
libs_3rd_party/glad/include/glad/: glad.h
libs_3rd_party/glad/src/: glad.c
libs_3rd_party/glfw-3.3-stable/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs_3rd_party/glfw-3.3-stable/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
scripts/: Clustering.r  Preprocessing_shanghai_ranking.r  SimplexGenerator.r
